#4 Основное окно приложения - Откат версии JavaFX до 11 - Добавление openjfx-monocle - Добавление профиля сборки для прогона без запуска приложения