@@ -15,8 +15,9 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <log4j.version>2.17.2</log4j.version>
         <testfx.version>4.0.16-alpha</testfx.version>
-        <javafx.version>17.0.2</javafx.version>
+        <javafx.version>11-ea+25</javafx.version>
         <maven.compiler.release>11</maven.compiler.release>
+        <openjfx.run.args/>
     </properties>
 
     <dependencies>
@@ -78,6 +79,23 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <profiles>
+        <profile>
+            <id>test-headless</id>
+            <properties>
+                <openjfx.run.args>-Dglass.platform=Monocle -Dprism.order=sw -Dmonocle.platform=Headless</openjfx.run.args>
+            </properties>
+            <dependencies>
+                <dependency>
+                    <groupId>org.testfx</groupId>
+                    <artifactId>openjfx-monocle</artifactId>
+                    <version>jdk-11+26</version>
+                    <scope>test</scope>
+                </dependency>
+            </dependencies>
+        </profile>
+    </profiles>
 
     <build>
         <pluginManagement>
@@ -194,6 +212,8 @@
                 <configuration>
                     <argLine>
                         --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+                        --add-exports javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
+                        ${openjfx.run.args}
                     </argLine>
                 </configuration>
             </plugin>
